--- a/src/app/components/increaser/increaser.component.html
+++ b/src/app/components/increaser/increaser.component.html
@@ -1,13 +1,17 @@
-<!-- <div class="input-group">
+<h3>{{ legend }}</h3>
+
+<div class="input-group">
   <span class="input-group-btn">
     <button class="btn btn-primary" type="button" (click)="SetBarValue(-5)">
       <i class="mdi mdi-minus"></i>
     </button>
   </span>
-  <input type="text" class="form-control" name="percentage" [(ngModel)]="percentage">
+
+  <input #InputPercentage type="number" class="form-control" name="percentage" (ngModelChange)="onValueChange($event)" [(ngModel)]="percentage" min="1" max="100">
+
   <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="SetBarValue(+5)">
           <i class="mdi mdi-plus"></i>
       </button>
     </span>
-</div> -->
+</div>
