--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -6,11 +6,11 @@
           <div class="card-body">
             <h4 class="card-title">Progress Bar</h4>
             <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValueNow]="percentage" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage + '%'" ></div>
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValueNow]="BluePercentage" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="BluePercentage + '%'" ></div>
             </div>
             <br>
             <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValueNow]="percentage" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage + '%'" ></div>
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValueNow]="GreenPercentage" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="GreenPercentage + '%'" ></div>
             </div>
           </div>
       </div>
@@ -22,19 +22,7 @@
         <div class="card">
             <div class="card-body">
               
-                <!-- <div class="input-group">
-                    <span class="input-group-btn">
-                      <button class="btn btn-primary" type="button" (click)="SetBarValue(-5)">
-                        <i class="mdi mdi-minus"></i>
-                      </button>
-                    </span>
-                    <input type="text" class="form-control" name="percentage" [(ngModel)]="percentage">
-                    <span class="input-group-btn">
-                        <button class="btn btn-primary" type="button" (click)="SetBarValue(+5)">
-                            <i class="mdi mdi-plus"></i>
-                        </button>
-                      </span>
-                </div> -->
+              <app-increaser legend="Progress Blue Bar" (percentageChanger)="BluePercentage= $event " [percentage]="BluePercentage"></app-increaser>
 
             </div>
         </div>
@@ -42,7 +30,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-              text 2
+              <app-increaser legend="Progress Green Bar" (percentageChanger)="GreenPercentage= $event " [percentage]="GreenPercentage"></app-increaser>
             </div>
         </div>
     </div>
