--- a/src/app/pages/graphics1/graphics1.component.html
+++ b/src/app/pages/graphics1/graphics1.component.html
@@ -2,16 +2,56 @@
   <div class="col-6">
       <div class="card">
           <div class="card-body">
-              
-            <div style="display: block">
-              <canvas baseChart
-                [data]="doughnutChartData"
-                [labels]="doughnutChartLabels"
-                [chartType]="doughnutChartType">
-              </canvas>
-            </div>
+            <h4 class="card-title">{{ graficos.grafico1.leyenda }}</h4>
+            <app-donut-chart 
+            [doughnutChartLabels]="graficos.grafico1.labels"
+            [doughnutChartData]="graficos.grafico1.data"
+            [doughnutChartType]="graficos.grafico1.type"
+            ></app-donut-chart>
 
           </div>
       </div>
   </div>
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">{{ graficos.grafico2.leyenda }}</h4>
+          <app-donut-chart 
+          [doughnutChartLabels]="graficos.grafico2.labels"
+          [doughnutChartData]="graficos.grafico2.data"
+          [doughnutChartType]="graficos.grafico2.type"
+          ></app-donut-chart>
+
+          </div>
+      </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">{{ graficos.grafico3.leyenda }}</h4>
+          <app-donut-chart 
+          [doughnutChartLabels]="graficos.grafico3.labels"
+          [doughnutChartData]="graficos.grafico3.data"
+          [doughnutChartType]="graficos.grafico3.type"
+          ></app-donut-chart>
+
+        </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">{{ graficos.grafico4.leyenda }}</h4>
+          <app-donut-chart 
+          [doughnutChartLabels]="graficos.grafico4.labels"
+          [doughnutChartData]="graficos.grafico4.data"
+          [doughnutChartType]="graficos.grafico4.type"
+          ></app-donut-chart>
+
+        </div>
+    </div>
+  </div>
 </div>
+
